collect images in a separate module